src/js/components/team-projects-view/project-card.scss
@import '../mixins';

.card {
  width: 100%;
  height: 498px;
  margin-bottom: 16px;
  border-radius: 3px;
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);

  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);

  &:hover {
    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.05);
  }
}

.screenshot {
  width: 100%;
  object-fit: cover;
}

.card-top {
  height: 244px;
}

.avatars {
  position: absolute;
  top: -18px;
  right: 20px;
}

.avatar {
  margin-left: 6px;
}

.avatar:first-child {
  margin-left: 0;
}

.card-middle {
  padding: 36px;
  height: 178px;
  background-color: #ffffff;
  position: relative;

  h3 {
    margin-top: 0;
  }
}

.card-bottom {
  padding: 18px 36px;
  height: 76px;
  background-color: #fbfbfb;

  color: #7f8c8d;
  font-size: 14px;
  letter-spacing: -0.11px;
  line-height: 20px;
}

.hover-effect {
  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);

  &:hover {
    background-color: #f3f3f3;
  }
}

.spread {
  display: flex;
  justify-content: space-between;
}

.title {
  font-size: 28px;
  color: #2C3E50;
  letter-spacing: -1px;
  margin-bottom: 12px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.description {
  font-size: 17px;
  letter-spacing: -0.21px;
  line-height: 24px;
  color: #4A4A4A;
  margin-top: 0px;
}

.preview-icon {
  margin-right: 6px;
}

.author, .target {
  @include nitti-grotesk-bold;
}

.timestamp {
  color: #95A5A6;
}

.open {
  @include nitti-grotesk-bold;
  font-size: 15px;
  color: #21BAB5;
}

.open-icon {
  font-size: 13px;
  padding-left: 2px;
}

.error {
  // disable hover
  pointer-events: none;

  background-color: #ffffff;
  color: #7F8C8D;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  h2 {
    margin: 0;
  }
}

